--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^15.1.1",
     "@react-native-firebase/auth": "^15.1.1",
+    "@react-native-firebase/messaging": "^15.1.1",
     "react": "18.0.0",
     "react-native": "0.69.1"
   },
